# chess-engine

./: Cargo.toml  README.md
src/: constants.rs  macros.rs  main.rs  pgn.rs  resources.rs
src/board/: components.rs  events.rs  mod.rs  pieces.rs  plugin.rs  systems.rs  utils.rs
src/board/systems/: input.rs  mod.rs  selection.rs  startup.rs
src/gui/: mod.rs  plugin.rs  systems.rs  utils.rs
