[package]
name = "chess-engine"
version = "0.1.0"
authors = ["gcarq <egger.m@protonmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_svg = { version = "0.7", default-features = false, features = ["2d"] }
bevy-inspector-egui = "0.11.0"