[package]
name = "chess-engine"
version = "0.1.0"
authors = ["gcarq <egger.m@protonmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_svg = { version = "0.7", default-features = false, features = ["2d"] }
bevy_egui = "0.14"
bevy-inspector-egui = "0.11.0"
bevy_prototype_lyon = "0.5.0"
itertools = "0.10.3"

[profile.release]
lto = "thin"
