[package]
name = "chess-engine"
version = "0.1.0"
authors = ["gcarq <egger.m@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy_svg = { version = "0.8.0", default-features = false, features = ["2d"] }
bevy_egui = "0.16.1"
bevy-inspector-egui = "0.13.0"
bevy_prototype_lyon = "0.6.0"
itertools = "0.10.5"

[profile.release]
lto = "thin"
